Fix search widget alignment across frontend and editor

--- a/assets/css/gm2-search-widget.css
+++ b/assets/css/gm2-search-widget.css
@@ -7,7 +7,7 @@
     --gm2-search-control-padding-x: 16px;
     --gm2-search-control-gap: 0px;
     display: flex;
-    align-items: center;
+    align-items: stretch;
     width: 100%;
     background-color: #f4f5f7;
     border: 1px solid rgba(24, 31, 43, 0.12);
@@ -25,6 +25,7 @@
 .elementor-search-form__container > * {
     margin: 0;
     box-sizing: border-box;
+    align-self: stretch;
 }
 
 .elementor-search-form--skin-minimal .elementor-search-form__container {
@@ -35,7 +36,7 @@
 .elementor-search-form__category {
     flex: 0 0 auto;
     display: flex;
-    align-items: center;
+    align-items: stretch;
     min-height: var(--gm2-search-control-height);
 }
 
@@ -44,7 +45,7 @@
     min-width: 160px;
     height: 100%;
     display: flex;
-    align-items: center;
+    align-items: stretch;
 }
 
 .gm2-category-filter__toggle {
@@ -63,6 +64,7 @@
     height: 100%;
     min-height: var(--gm2-search-control-height);
     box-sizing: border-box;
+    background-color: inherit;
 }
 
 .elementor-search-form__category-select {
@@ -71,6 +73,7 @@
     padding: 0 var(--gm2-search-control-padding-x);
     box-sizing: border-box;
     border-radius: 0;
+    background-color: transparent;
 }
 
 .gm2-category-filter__toggle:focus {
@@ -93,6 +96,7 @@
     border-right: 5px solid transparent;
     border-top: 5px solid currentColor;
     transition: transform 0.2s ease;
+    align-self: center;
 }
 
 .gm2-category-filter--open .gm2-category-filter__caret {
@@ -188,15 +192,21 @@
 .elementor-search-form__category-select {
     flex: 1 1 auto;
     min-width: 0;
-    border: none;
-    background: transparent;
-    padding: 0 var(--gm2-search-control-padding-x);
+    border: none !important;
+    background-color: transparent !important;
     font-size: 16px;
-    line-height: 1.4;
+    line-height: 1.5;
     color: inherit;
-    height: 100%;
     min-height: var(--gm2-search-control-height);
     box-sizing: border-box;
+    display: block;
+    height: var(--gm2-search-control-height);
+    padding-left: var(--gm2-search-control-padding-x);
+    padding-right: var(--gm2-search-control-padding-x);
+    padding-top: calc((var(--gm2-search-control-height) - 1.5em) / 2);
+    padding-bottom: calc((var(--gm2-search-control-height) - 1.5em) / 2);
+    padding-top: max(0px, calc((var(--gm2-search-control-height) - 1.5em) / 2));
+    padding-bottom: max(0px, calc((var(--gm2-search-control-height) - 1.5em) / 2));
 }
 
 .elementor-search-form__category-select {
@@ -227,6 +237,7 @@
     min-height: var(--gm2-search-control-height);
     height: 100%;
     box-sizing: border-box;
+    align-self: stretch;
 }
 
 .elementor-search-form__submit svg {
